--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,7 @@
 body{
     width: 100vw;
+    height: auto;
+    overflow-x: hidden;
     min-height: 600px;
     background: linear-gradient(#FF986B, #F94A4A);
     margin: 0;
@@ -47,6 +49,7 @@ h1{
     border: 15px solid white;
     margin: 0 auto;
     padding: 4%;
+    margin-bottom: 80px;
 }
 
 .inputAddPlayer{
@@ -65,6 +68,7 @@ h1{
     border-radius: 10px;
     border: 5px solid transparent;
 }
+
 
 .inputAddPlayer:hover{
     box-shadow: 0 0 10px #00000020;
@@ -126,6 +130,10 @@ h1{
     transform: rotate(90deg);
 }
 
+.buttonAddPlayer p{
+    margin: 0;
+}
+
 /* Beer Count */
 
 .beerCountContainer{
@@ -155,18 +163,16 @@ h1{
 /* List player */
 
 .containerlistPlayer{
-    width: 50%;
+    width: 40%;
     min-width: 200px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    margin-top: 80px;
     margin-bottom: 100px;
 }
 
 .subTitle{
     display: inline;
-    width: 50%;
     text-align: center;
     font-size: 42px;
     color: white;
@@ -179,7 +185,7 @@ h1{
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .subTitlePlayer{
@@ -226,13 +232,21 @@ h1{
 
 .navBtn{
     position: absolute;
-    width: 60px;
+    width: 100px;
     height: 100px;
     top : 0%;
     right: 0%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #replay{
+    width: 40px;
+    cursor: pointer;
+}
+
+#settings{
     width: 40px;
     cursor: pointer;
 }
@@ -381,14 +395,24 @@ h1{
 /* PARAMETRES */
 
 .settingsContainer{
+    display: none;
     position: absolute;
-    width: 50%;
+    width: 70%;
     min-height: 500px;
     border: 10px solid #7a7a7a;
     border-radius: 20px;
     top : 10%;
-    left: 25%;
+    left: 15%;
     background-color: #343434;
+}
+
+.setLevelContainer{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-right: 0;
 }
 
 .btnMinus, .btnMore{
@@ -400,7 +424,152 @@ h1{
     cursor: pointer;
 }
 
+.rowSettings{
+    width: 50%;
+    min-width: 250px;
+}
 
+#close{
+    width : 50px;
+    height: auto;
+    margin : 20px;
+    cursor: pointer;
+}
+
+/* COMMENT JOUER */
+
+.btnOpen{
+    position: absolute;
+    top : 0px;
+    left: 15px;
+    width: 240px;
+    height: 60px;
+    cursor: pointer;
+    background-color: #F94A4A;
+    border: 5px solid white;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .3s ease;
+}
+
+.btnOpen:hover{
+    background-color: #b12626;
+}
+
+.btnOpen h5{
+    color: white;
+    font-family: Poppins;
+}
+
+.howToPlayContainer{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 5%;
+    width: 70%;
+    min-height: 600px;
+    background-color: #343434;
+    border: 10px solid #7a7a7a;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2% 10% 5% 10%;
+}
+
+.howToPlayContainer .closeHowToPlay{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.howToPlayContainer h1{
+    font-family: Fredo;
+    font-size: 76px;
+}
+
+.howToPlayContainer .chooseSectionHow{
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
+}
+
+.howToPlayContainer .sectionBeer{
+    width: 30%;
+    height: 60px;
+    background-color: #F94A4A;
+    border: 5px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all .3s ease;
+}
+
+.howToPlayContainer .sectionBeer:hover{
+    background-color: #b12626;
+}
+
+.howToPlayContainer .sectionBeer h4{
+    color: white;
+    font-family: poppins;
+}
+
+.howToNiveaux{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.howToNiveaux p, .howToPartie p, .howToGage p{
+    color: white;
+    font-family: Poppins;
+    margin-top: 50px;
+}
+
+.howToNiveaux img{
+    width: 150px;
+    margin-bottom: 50px;
+}
+
+.howToPartie{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; 
+}
+
+.howToPartie img{
+    width: 600px;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 50px;
+}
+
+.howToGage{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; 
+}
+
+.howToGage img{
+    margin-bottom: 50px;
+}
+
+.howToGage :nth-child(2){
+   width: 500px;
+}
 
 @font-face {
     font-family: Orangina;
@@ -409,4 +578,40 @@ h1{
 @font-face {
     font-family: Fredo;
     src: url(../fonts/FredokaOne-Regular.ttf) format("truetype");
+}
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width:1610px) {
+    .containerAddPlayer{
+        width: 70%;
+    }
+
+    .btnText{
+        font-size: 50px;
+    }
+
+    .pageChallenge{
+        width: 70%;
+    }
+}
+
+@media screen and (max-width:1150px) {
+    .firstChallenge, .secondChallenge{
+        width: 200px;
+        height: 200px;
+    }
+
+    .firstChallenge h3, .secondChallenge h3{
+        font-size: 18px;
+    }
+
+    .inputAddPlayer{
+        width: 65%;
+    }
+
+    .inputAddPlayer::placeholder{
+        font-size: 45px;
+    }
 }
