--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ body{
 
 
 .button{
-    width: 300px;
-    height: 100px;
+    width: 500px;
+    height: 200px;
+    font-weight: 700;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -55,7 +56,7 @@ body{
 
 .buttonText{
     color: white;
-    font-size: 24px;
+    font-size: 64px;
 }
 
 .questionContainer{
@@ -63,7 +64,7 @@ body{
     height: 100vh;
     position: absolute;
     z-index: 3;
-    top: 100%;
+    top: 300%;
     left: 0;
     display: flex;
     flex-direction: column;
