--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 80px;
 }      
 
 
@@ -52,6 +53,7 @@ body{
     cursor: pointer;
     background-color: red;
     border-radius: 20px;
+    margin-left: 340px;
 }
 
 .buttonText{
@@ -83,7 +85,7 @@ body{
 }
 
 .description{
-    color: grey;
+    color: white;
     font-size: 32px;
     font-weight: 400;
     margin-bottom: 20px;
@@ -93,12 +95,12 @@ body{
     color: white;
     font-size: 80px;
     font-weight: 400;
-    margin-bottom: 60px;
+    margin-bottom: 200px;
 }
 
 .closeButton{
-    width: 420px;
-    height: 120px;
+    width: 500px;
+    height: 200px;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -110,7 +112,7 @@ body{
 
 .closeTxt{
     color: white;
-    font-size: 40px;
+    font-size: 64px;
     font-weight: 700;
 }
 
