--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body{
     position: relative;
     background-color: #ff9d9d;
+    margin: 0;
 }
+
   
+/* ROULETTE */
+
   /* Placement de la roulette */
   #roulette{
     position:absolute;
@@ -42,25 +46,7 @@ body{
     margin-left: 80px;
 }      
 
-
-.button{
-    width: 500px;
-    height: 200px;
-    font-weight: 700;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    background-color: red;
-    border-radius: 20px;
-    margin-left: 340px;
-}
-
-.buttonText{
-    color: white;
-    font-size: 64px;
-}
+/* QUESTIONS */
 
 .questionContainer{
     width: 100vw;
@@ -97,6 +83,27 @@ body{
     font-size: 80px;
     font-weight: 400;
     margin-bottom: 200px;
+}
+
+/* BOUTONS */
+
+.button{
+    width: 500px;
+    height: 200px;
+    font-weight: 700;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: red;
+    border-radius: 20px;
+    margin-left: 340px;
+}
+
+.buttonText{
+    color: white;
+    font-size: 64px;
 }
 
 .closeButton{
