--- a/styles/main.css
+++ b/styles/main.css
@@ -60,6 +60,7 @@ h2{
     margin-bottom: 80px;
     display: flex;
     flex-wrap: nowrap;
+    align-items: center;
 }
 
 .inputAddPlayer{
@@ -77,6 +78,12 @@ h2{
     cursor: pointer;
     border-radius: 10px;
     border: 5px solid transparent;
+}
+
+.removePlayerBtn{
+    width: 20px;
+    margin-left: 40px;
+    cursor: pointer;
 }
 
 .inputAddPlayer.inGame{
@@ -151,6 +158,7 @@ h2{
 
 .buttonAddPlayer p{
     margin: 0;
+    text-align: center;
 }
 
 
@@ -316,7 +324,7 @@ h2{
 
 /* SETTINGS */
 
-.settingsContainer{
+.settingsContainer, .writeContainer{
     width: 70%;
     height: 400px;
     background-color: #9e9e9e;
@@ -329,10 +337,21 @@ h2{
     border: 5px solid black;
 }
 
+.writeContainer{
+    height: 460px;
+}
+
 #settingsOpen{
     position: absolute;
     width: 60px;
     left: 20px;
+    cursor: pointer;
+}
+
+#writeOpen{
+    position: absolute;
+    width: 60px;
+    right: 20px;
     cursor: pointer;
 }
 
@@ -373,12 +392,13 @@ h2{
     width: 110%;
 }
 
-#settingsBtnClose{
+#settingsBtnClose, #writeBtnClose{
     width: 30px;
     height: 30px;
     margin: 10px 0 0 10px;
     cursor: pointer;
 }
+
 
 .iconSettingsContainer img{
     width: auto;
@@ -416,6 +436,37 @@ h2{
     background-color: #ffe98b;
 }
 
+#writeQuestionInput{
+    width: 80%;
+    height: 160px;
+    margin: 0 auto;
+    border-radius: 20px;
+    border: 2px solid black;
+    display: flex;
+    vertical-align: top;
+    background-color: white;
+    color: black;
+    font-size: 1.2em;
+    padding-top: 14px;
+}
+
+.button1.writeQuestion{
+    height: 60px;
+    border: 5px solid #FF986B;
+    margin: 20px auto;
+}
+
+.button1.writeQuestion h1{
+    font-size: 35px;
+}
+
+#nbQuestionWritten{
+    display: none;
+    font-size: 16px;
+    font-family: Orangina;
+    color: #54d554;
+    text-align: center;
+}
 
 
 @font-face {
